# eda-infra-rs

./: .gitignore
clilog/src/: lib.rs  logging_timer.rs
clilog/tests/: basic.rs
netlistdb/examples/: print_statistics.rs
netlistdb/src/: builder.rs  csr.rs  disjoint_set.rs  hier_name.rs  lib.rs  utils.rs
netlistdb/tests/: notsimple.rs  simple.rs
sverilogparse/examples/: sverilog_statistics.rs
sverilogparse/src/: fmt.rs  lib.rs  range.rs  sverilognom.rs
sverilogparse/tests/: not_expr.v  tests.rs
ucc/src/: bindgen.rs  compile.rs  headers.rs  lib.rs  lsp.rs
ulib/: Cargo.toml  build.rs
ulib/csrc/: macros.hpp  memfill.hip.cpp  types.hpp
ulib/src/: hip_ffi.rs  lib.rs  profile.rs  raw_ptr.rs  uvec.rs
ulib/tests/: test_profile.rs  test_simple.rs
ulib/ulib-derive/src/: lib.rs
vcd-ng/src/: fastflow.rs  idcode.rs  lib.rs  read.rs  write.rs
