[package]
name = "ulib"
version = "0.3.13"
edition = "2021"
description = "Universal data storage library for CPU/GPU heterogeneous applications"
authors = ["Zizheng Guo <gzz_2000@126.com>"]
links = "ulib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.10.0"
clilog = { version = "0.2.5", path = "../clilog" }
cust = { version = "0.3.2", optional = true, features = ["bytemuck"] }
cust_raw = { version = "0.11.3", optional = true }
impl-tools = "0.10.0"
lazy_static = "1.4.0"
memory-stats = "1.1.0"
metal = { version = "0.29", optional = true }
objc = { version = "0.2", optional = true }
block = { version = "0.1", optional = true }
rayon = { version = "1.7.0", optional = true }
size = "0.4.1"
ulib-derive = { version = "0.1.0", path = "ulib-derive" }
ulib_zeroable_derive = { version = "0.2.0", path = "../ulib_zeroable_derive" }

[features]
cuda = ["dep:cust", "dep:cust_raw", "ulib-derive/cuda"]
metal = ["dep:metal", "dep:objc", "dep:block"]
rayon = ["dep:rayon"]

[build-dependencies]
ucc = { version = "0.2.6", path = "../ucc" }
